--- a/scr/webapp/css/main.css
+++ b/scr/webapp/css/main.css
@@ -69,4 +69,15 @@ a{
 
 .content {
     background-color: rgba(255,255,255,0.7);
+    padding:45px;
+}
+
+.pageTitle {
+    padding-bottom: 30px;
+    font-size: 30px;
+}
+
+div {
+    font-family: Calibri;
+    font-size: 18px;
 }
