--- a/scr/webapp/css/main.css
+++ b/scr/webapp/css/main.css
@@ -90,6 +90,27 @@ div {
     margin: 15px 0px;
 }
 
+.button {
+    background-color: #c42d2d;
+    border: none;
+    color: white;
+    padding: 2px 2px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border: 2px solid #c42d2d;
+}
+
+.button:hover {
+    background-color: firebrick;
+    color: black;
+}
+
 .botonPaginacionSeleccionado, .botonPaginacion{
     margin: 0px 3px;
 }
@@ -97,5 +118,6 @@ div {
     margin: 0px 4px;
 }
 .botonPaginacionSeleccionado{
-    border: 1px solid #0000ff;
+    background-color: #851f1f;
+    border: 2px solid #851f1f;
 }
